# cr_rzv1

./: .dockerignore  .env.example  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py  schemas.py  task_manager.py
app/config/: __init__.py  llm_config.py  settings.py
app/prompts/: agent_prompt.py
app/tools/: __init__.py  word_tool.py  zip_tool.py
app/workflows/: __init__.py  build_code_docx.py  code_generation.py
static/: index.html
