[project]
name = "cr-rz"
version = "0.1.0"
description = "基于 LLM 的软著代码与材料生成服务"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "deepagents>=0.7.0a4",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "langchain>=1.2.6",
    "langchain-core>=1.4.6",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-prebuilt>=1.0.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "pypandoc>=1.16.2",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
